--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "postcss": "^8.4.35",
     "react-router-dom": "^6.22.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
