--- a/client/components.json
+++ b/client/components.json
@@ -7,11 +7,11 @@
     "config": "./tailwind.config.js",
     "css": "./src/index.css",
     "baseColor": "slate",
-    "cssVariables": true,
+    "cssVariables": false,
     "prefix": ""
   },
   "aliases": {
-    "components": "~/components",
-    "utils": "~/lib/utils"
+    "components": "./src/components",
+    "utils": "./src/lib/utils"
   }
 }
