--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "prettier-plugin-tailwindcss": "^0.5.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-simple-typewriter": "^5.0.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
