--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@redux-devtools/extension": "^3.3.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "formik": "^2.4.5",
     "lucide-react": "^0.358.0",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.12",
@@ -30,6 +31,7 @@
     "react-simple-typewriter": "^5.0.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "yup": "^1.4.0",
     "zod": "^3.22.4",
     "zustand": "^4.5.2"
   },
