--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.0",
     "formik": "^2.4.5",
     "lucide-react": "^0.358.0",
+    "next-themes": "^0.3.0",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.12",
     "react": "^18.2.0",
@@ -29,6 +30,7 @@
     "react-hook-form": "^7.51.1",
     "react-icons": "^5.0.1",
     "react-simple-typewriter": "^5.0.1",
+    "sonner": "^1.4.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "yup": "^1.4.0",
