--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,7 @@
 .env.test.local
 .env.production.local
 .vscode/
-Shastamart.session.sql
+shastamart-aws-rds.session.sql
 
 npm-debug.log*
 yarn-debug.log*
