--- a/client/.prettierrc
+++ b/client/.prettierrc
@@ -6,6 +6,6 @@
   "tabWidth": 2,
   "semi": true,
   "bracketSpacing": true,
-  "jsxBracketSameLine": false,
+  "jsxBracketSameLine": true,
   "arrowParens": "always"
 }
