--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mysql2": "^3.9.3",
     "nodemon": "^3.1.0",
     "path": "^0.12.7",
+    "react-hot-toast": "^2.4.1",
     "react-toastify": "^10.0.5",
     "vercel": "^33.7.0"
   }
