Insert into shipping table

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "path": "^0.12.7",
     "react-hot-toast": "^2.4.1",
     "react-toastify": "^10.0.5",
+    "uuid": "^9.0.1",
     "vercel": "^33.7.0"
   }
 }
