--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@
 .env.production.local
 .vscode/
 shastamart-aws-rds.session.sql
+shastamart-azure.session.sql
 DigiCertGlobalRootCA.crt.pem
 
 npm-debug.log*
